--- a/.gitattributes
+++ b/.gitattributes
@@ -7,20 +7,15 @@
 *.hxx     text eol=lf
 
 # Arduino Sketch Files
-*.ino     text eol=lf
-*.pde     text eol=lf
-
-# Disable automatic line-ending normalization for Arduino files
-# since Arduino IDE may prefer to work with Windows-style line endings
 *.ino     text eol=crlf
 *.pde     text eol=crlf
 
-# C++ and Arduino Files: Enable syntax highlighting for diffs
-*.cpp     diff=c++
-*.h       diff=c++
-*.hpp     diff=c++
-*.ino     diff=c++
-*.pde     diff=c++
+# C++ and Arduino Files: Ensure correct language detection on GitHub
+*.cpp     linguist-language=C++
+*.h       linguist-language=C++
+*.hpp     linguist-language=C++
+*.ino     linguist-language=C++
+*.pde     linguist-language=C++
 
 # Text files to be treated as plain text
 *.txt     text
